EKS/Typescript/k8s/namespace-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: typescript-app
